build/log/idf_py_stdout_output_59258
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/rmt_nema.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/rmt_nema.c.obj 
/home/vanir17/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.1-dev-2441-gffb63db38b-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf/build/config -I/home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf/main -I/home/vanir17/esp/esp-idf/components/esp_libc/platform_include -I/home/vanir17/esp/esp-idf/components/freertos/config/include -I/home/vanir17/esp/esp-idf/components/freertos/config/include/freertos -I/home/vanir17/esp/esp-idf/components/freertos/config/xtensa/include -I/home/vanir17/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/vanir17/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/vanir17/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/vanir17/esp/esp-idf/components/freertos/esp_additions/include -I/home/vanir17/esp/esp-idf/components/esp_hw_support/include -I/home/vanir17/esp/esp-idf/components/esp_hw_support/include/soc -I/home/vanir17/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/vanir17/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/vanir17/esp/esp-idf/components/esp_hw_support/etm/include -I/home/vanir17/esp/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/include -I/home/vanir17/esp/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/tuning_scheme_impl/include -I/home/vanir17/esp/esp-idf/components/esp_hw_support/mspi/mspi_intr/include -I/home/vanir17/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/vanir17/esp/esp-idf/components/esp_hw_support/modem/include -I/home/vanir17/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/vanir17/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/vanir17/esp/esp-idf/components/heap/include -I/home/vanir17/esp/esp-idf/components/heap/tlsf -I/home/vanir17/esp/esp-idf/components/log/include -I/home/vanir17/esp/esp-idf/components/soc/include -I/home/vanir17/esp/esp-idf/components/soc/esp32 -I/home/vanir17/esp/esp-idf/components/soc/esp32/include -I/home/vanir17/esp/esp-idf/components/soc/esp32/register -I/home/vanir17/esp/esp-idf/components/hal/platform_port/include -I/home/vanir17/esp/esp-idf/components/hal/esp32/include -I/home/vanir17/esp/esp-idf/components/hal/include -I/home/vanir17/esp/esp-idf/components/esp_rom/include -I/home/vanir17/esp/esp-idf/components/esp_rom/esp32/include -I/home/vanir17/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/vanir17/esp/esp-idf/components/esp_rom/esp32 -I/home/vanir17/esp/esp-idf/components/esp_common/include -I/home/vanir17/esp/esp-idf/components/esp_system/include -I/home/vanir17/esp/esp-idf/components/esp_system/port/soc -I/home/vanir17/esp/esp-idf/components/esp_system/port/include/private -I/home/vanir17/esp/esp-idf/components/esp_stdio/include -I/home/vanir17/esp/esp-idf/components/xtensa/esp32/include -I/home/vanir17/esp/esp-idf/components/xtensa/include -I/home/vanir17/esp/esp-idf/components/xtensa/deprecated_include -I/home/vanir17/esp/esp-idf/components/esp_hal_gpio/include -I/home/vanir17/esp/esp-idf/components/esp_hal_gpio/esp32/include -I/home/vanir17/esp/esp-idf/components/esp_hal_usb/include -I/home/vanir17/esp/esp-idf/components/esp_hal_pmu/include -I/home/vanir17/esp/esp-idf/components/esp_hal_pmu/esp32/include -I/home/vanir17/esp/esp-idf/components/esp_hal_ana_conv/include -I/home/vanir17/esp/esp-idf/components/esp_hal_ana_conv/esp32/include -I/home/vanir17/esp/esp-idf/components/esp_hal_dma/include -I/home/vanir17/esp/esp-idf/components/esp_hal_i2s/include -I/home/vanir17/esp/esp-idf/components/esp_hal_i2s/esp32/include -I/home/vanir17/esp/esp-idf/components/esp_driver_gpio/include -I/home/vanir17/esp/esp-idf/components/esp_driver_rmt/include -I/home/vanir17/esp/esp-idf/components/esp_hal_rmt/include -I/home/vanir17/esp/esp-idf/components/esp_hal_rmt/esp32/include -I/home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf/managed_components/espressif__led_strip/include -I/home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf/managed_components/espressif__led_strip/interface -I/home/vanir17/esp/esp-idf/components/esp_driver_spi/include -I/home/vanir17/esp/esp-idf/components/esp_pm/include -I/home/vanir17/esp/esp-idf/components/esp_hal_gpspi/include -I/home/vanir17/esp/esp-idf/components/esp_hal_gpspi/esp32/include -I/home/vanir17/esp/esp-idf/components/esp_driver_dma/include @"/home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf/build/toolchain/cflags" -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf=. -fmacro-prefix-map=/home/vanir17/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/rmt_nema.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/rmt_nema.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/rmt_nema.c.obj -c /home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf/main/rmt_nema.c
/home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf/main/rmt_nema.c: In function 'rmt_nema_set_speed':
/home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf/main/rmt_nema.c:22:21: error: passing argument 1 of 'rmt_disable' from incompatible pointer type [-Wincompatible-pointer-types]
   22 |         rmt_disable(config);
      |                     ^~~~~~
      |                     |
      |                     rmt_nema_config_t *
In file included from /home/vanir17/esp/esp-idf/components/esp_driver_rmt/include/driver/rmt_tx.h:12,
                 from /home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf/main/rmt_nema.h:3,
                 from /home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf/main/rmt_nema.c:1:
/home/vanir17/esp/esp-idf/components/esp_driver_rmt/include/driver/rmt_common.h:67:44: note: expected 'rmt_channel_handle_t' {aka 'struct rmt_channel_t *'} but argument is of type 'rmt_nema_config_t *'
   67 | esp_err_t rmt_disable(rmt_channel_handle_t channel);
      |                       ~~~~~~~~~~~~~~~~~~~~~^~~~~~~
In file included from /home/vanir17/esp/esp-idf/components/esp_driver_rmt/include/driver/rmt_common.h:11:
/home/vanir17/esp/esp-idf/components/esp_driver_rmt/include/driver/rmt_types.h:22:31: note: 'rmt_channel_handle_t' declared here
   22 | typedef struct rmt_channel_t *rmt_channel_handle_t;
      |                               ^~~~~~~~~~~~~~~~~~~~
/home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf/main/rmt_nema.c:42:17: error: passing argument 1 of 'rmt_disable' from incompatible pointer type [-Wincompatible-pointer-types]
   42 |     rmt_disable(config);
      |                 ^~~~~~
      |                 |
      |                 rmt_nema_config_t *
/home/vanir17/esp/esp-idf/components/esp_driver_rmt/include/driver/rmt_common.h:67:44: note: expected 'rmt_channel_handle_t' {aka 'struct rmt_channel_t *'} but argument is of type 'rmt_nema_config_t *'
   67 | esp_err_t rmt_disable(rmt_channel_handle_t channel);
      |                       ~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/home/vanir17/esp/esp-idf/components/esp_driver_rmt/include/driver/rmt_types.h:22:31: note: 'rmt_channel_handle_t' declared here
   22 | typedef struct rmt_channel_t *rmt_channel_handle_t;
      |                               ^~~~~~~~~~~~~~~~~~~~
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf/build/bootloader && /home/vanir17/.espressif/python_env/idf6.1_py3.10_env/bin/python /home/vanir17/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/vanir17/1_workspace/esp_idf_ws/testing/02_rmt_nema_api/api_rmt_nema17_esp_idf/build/bootloader/bootloader.bin
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
ninja: build stopped: subcommand failed.
